k8s/evaluation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - name: http
      port: 8004
      targetPort: http
